added feature to override the short hostname of urls in the registry config but keep the domain (for rc testing) using the ca.nrc.cadc.reg.client.RegistryClient.shortHostname system property